kubeshop/templates/05-toolbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
  namespace: kubeshop-lkc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toolbox
  template:
    metadata:
      labels:
        app: toolbox
    spec:
      containers:
        - name: toolbox
          image: curlimages/curl:8.5.0
          command: ["sh", "-c", "sleep 365d"]
