kubeshop/templates/22-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-web
  namespace: kubeshop-lkc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeshop-web
      component: web
  template:
    metadata:
      labels:
        app: kubeshop-web
        component: web
    spec:
      securityContext:
        fsGroup: 101
        runAsUser: 101
        runAsNonRoot: false
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
            - name: web-nginx
              mountPath: /etc/nginx/conf.d
              readOnly: false
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: web-content
          configMap:
            name: kubeshop-web-content
        - name: web-nginx
          configMap:
            name: kubeshop-web-nginx
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
