kubeshop/templates/34-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-api
  namespace: kubeshop-lkc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeshop-api
  template:
    metadata:
      labels:
        app: kubeshop-api
        component: api # fix
    spec:
      serviceAccountName: shop-ops
      containers:
        - name: api
          image: ealen/echo-server:latest
          ports:
            - name: http
              containerPort: 8080
