kubeshop/templates/25-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeshop-api-svc
  namespace: kubeshop-lkc
spec:
  selector:
    app: kubeshop-api
    component: api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
